--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "scripts": {
   "start": "react-scripts start",
   "build": "react-scripts build",
-  "deploy": "npm run build && npx ftp-deploy-cli start",
+  "deploy": "npm run build && npx ftp-deploy-cli --remote-dir /public_html --local-dir build",
   "test": "react-scripts test",
   "eject": "react-scripts eject"
 },
